--- a/day12/band_clone.html
+++ b/day12/band_clone.html
@@ -126,24 +126,34 @@
                             <a href="#">모두보기</a>
                         </p>
                     </div>
-                    <ul>
-                        <li>
-                            <img src="./band_img.png" alt="band_img">
+                    <ul class="band_selection">
+                        <li class="band_selection_box">
+                            <div>
+                                <img src="./band_selection-1.jpeg" alt="band_img">
+                            </div>
                             <div class="band_name_box">
-                                <h3>밴드 이름</h3>
-                                <p>설명</p>
+                                <h3>
+                                    국립공원 국민모니터링
+                                </h3>
+                                <p>
+                                    국립공원 생물계절 모니터링을 위한 밴드입니다.
+                                </p>
                                 <div>
-                                    <span>멤버수</span>
+                                    <span>
+                                        멤버 792
+                                    </span>
                                     <span>
                                        · 
                                     </span>
-                                    <span>리더</span>
+                                    <span>
+                                        리더 국립공원 연구원
+                                    </span>
                             </div>
                             <div>
                                 <button class="band_btn">
                                    <a href="#">
                                             <span>
-                                                주제
+                                                생태
                                             </span>
                                             밴드 더보기
                                             <i class="fa-solid fa-chevron-right"></i>
@@ -151,23 +161,31 @@
                                 </button>
                             </div>
                         </li>
-                        <li>
-                            <img src="./band_img.png" alt="band_img">
+                        <li class="band_selection_box">
+                            <img src="./band_selection-2.jpg" alt="band_img">
                             <div class="band_name_box">
-                                <h3>밴드 이름</h3>
-                                <p>설명</p>
+                                <h3>
+                                    천문학, 우주를 사랑하는 사람들
+                                </h3>
+                                <p>
+                                    천문학, 우주의 물리법칙과 정보를 함께 공유하는 밴드입니다.
+                                </p>
                                 <div>
-                                    <span>멤버수</span>
+                                    <span>
+                                        멤버 10,391
+                                    </span>
                                     <span>
                                        · 
                                     </span>
-                                    <span>리더</span>
+                                    <span>
+                                        리더 공유결합^^
+                                    </span>
                             </div>
                             <div>
                                 <button class="band_btn">
                                    <a href="#">
                                             <span>
-                                                주제
+                                                천문학
                                             </span>
                                             밴드 더보기
                                             <i class="fa-solid fa-chevron-right"></i>
@@ -175,23 +193,31 @@
                                 </button>
                             </div>
                         </li>
-                        <li>
-                            <img src="./band_img.png" alt="band_img">
+                        <li class="band_selection_box">
+                            <img src="./band_selection-3.jpg" alt="band_img">
                             <div class="band_name_box">
-                                <h3>밴드 이름</h3>
-                                <p>설명</p>
+                                <h3>
+                                    미술로 여는 세상
+                                </h3>
+                                <p>
+                                    미술과 함께하는 작지만 확실한 행복!! 일상 속 커피 한 잔의 여유로...
+                                </p>
                                 <div>
-                                    <span>멤버수</span>
+                                    <span>
+                                        멤버 8,786
+                                    </span>
                                     <span>
                                        · 
                                     </span>
-                                    <span>리더</span>
+                                    <span>
+                                        리더 아름다운나무
+                                    </span>
                             </div>
                             <div>
                                 <button class="band_btn">
                                    <a href="#">
                                             <span>
-                                                주제
+                                                미술 
                                             </span>
                                             밴드 더보기
                                             <i class="fa-solid fa-chevron-right"></i>
@@ -199,23 +225,31 @@
                                 </button>
                             </div>
                         </li>
-                        <li>
-                            <img src="./band_img.png" alt="band_img">
+                        <li class="band_selection_box">
+                            <img src="./band_selection-4.jpg" alt="band_img">
                             <div class="band_name_box">
-                                <h3>밴드 이름</h3>
-                                <p>설명</p>
+                                <h3>
+                                    오늘 어떤 꽃을 보셨나요?
+                                </h3>
+                                <p>
+                                    꽃이름 궁금할 때 쉽게 묻고 답하는 꽃밴드 <꽃니랑>입니다~^^
+                                </p>
                                 <div>
-                                    <span>멤버수</span>
+                                    <span>
+                                        멤버 3,634
+                                    </span>
                                     <span>
                                        · 
                                     </span>
-                                    <span>리더</span>
+                                    <span>
+                                        리더 정나연
+                                    </span>
                             </div>
                             <div>
                                 <button class="band_btn">
                                    <a href="#">
                                             <span>
-                                                주제
+                                                꽃
                                             </span>
                                             밴드 더보기
                                             <i class="fa-solid fa-chevron-right"></i>
@@ -223,23 +257,31 @@
                                 </button>
                             </div>
                         </li>
-                        <li>
-                            <img src="./band_img.png" alt="band_img">
+                        <li class="band_selection_box">
+                            <img src="./band_selection-5.jpeg" alt="band_img">
                             <div class="band_name_box">
-                                <h3>밴드 이름</h3>
-                                <p>설명</p>
+                                <h3>
+                                    공식 밴드 대한민국 경찰청
+                                </h3>
+                                <!-- <p>
+                                    설명
+                                </p> -->
                                 <div>
-                                    <span>멤버수</span>
+                                    <span>
+                                        멤버 134,821
+                                    </span>
                                     <span>
                                        · 
                                     </span>
-                                    <span>리더</span>
+                                    <span>
+                                        리더 경찰청
+                                    </span>
                             </div>
                             <div>
                                 <button class="band_btn">
                                    <a href="#">
                                             <span>
-                                                주제
+                                                경찰
                                             </span>
                                             밴드 더보기
                                             <i class="fa-solid fa-chevron-right"></i>
@@ -247,23 +289,31 @@
                                 </button>
                             </div>
                         </li>
-                        <li>
-                            <img src="./band_img.png" alt="band_img">
+                        <li class="band_selection_box">
+                            <img src="./band_selection-6.jpg" alt="band_img">
                             <div class="band_name_box">
-                                <h3>밴드 이름</h3>
-                                <p>설명</p>
+                                <h3>
+                                    거북이 공원
+                                </h3>
+                                <p>
+                                    육지 거북이 ,반수생 거북이를 키우시거나 관심있으신분들 많이 많...
+                                </p>
                                 <div>
-                                    <span>멤버수</span>
+                                    <span>
+                                        멤버 849
+                                    </span>
                                     <span>
                                        · 
                                     </span>
-                                    <span>리더</span>
+                                    <span>
+                                        리더 거북이 집사
+                                    </span>
                             </div>
                             <div>
                                 <button class="band_btn">
                                    <a href="#">
                                             <span>
-                                                주제
+                                                육지 거북이
                                             </span>
                                             밴드 더보기
                                             <i class="fa-solid fa-chevron-right"></i>
@@ -271,23 +321,31 @@
                                 </button>
                             </div>
                         </li>
-                        <li>
-                            <img src="./band_img.png" alt="band_img">
+                        <li class="band_selection_box">
+                            <img src="./band_selection-7.jpg" alt="band_img">
                             <div class="band_name_box">
-                                <h3>밴드 이름</h3>
-                                <p>설명</p>
+                                <h3>
+                                    English Cafe 매일영어
+                                </h3>
+                                <p>
+                                    We can do it! 매일 꼭 한 문장씩 외워봅시다
+                                </p>
                                 <div>
-                                    <span>멤버수</span>
+                                    <span>
+                                        멤버 9,478
+                                    </span>
                                     <span>
                                        · 
                                     </span>
-                                    <span>리더</span>
+                                    <span>
+                                        리더 박썜
+                                    </span>
                             </div>
                             <div>
                                 <button class="band_btn">
                                    <a href="#">
                                             <span>
-                                                주제
+                                                매일영어
                                             </span>
                                             밴드 더보기
                                             <i class="fa-solid fa-chevron-right"></i>
@@ -295,23 +353,31 @@
                                 </button>
                             </div>
                         </li>
-                        <li>
-                            <img src="./band_img.png" alt="band_img">
+                        <li class="band_selection_box">
+                            <img src="./band_selection-8.jpg" alt="band_img">
                             <div class="band_name_box">
-                                <h3>밴드 이름</h3>
-                                <p>설명</p>
+                                <h3>
+                                    한국문인화 서예 미술창작&유화 인물화
+                                </h3>
+                                <p>
+                                    문인화 서예 그림 미술창작& 유화 수채화 천아트 추사체 수묵...
+                                </p>
                                 <div>
-                                    <span>멤버수</span>
+                                    <span>
+                                        멤버 5,359
+                                    </span>
                                     <span>
                                        · 
                                     </span>
-                                    <span>리더</span>
+                                    <span>
+                                        리더 정유 / 작가
+                                    </span>
                             </div>
                             <div>
                                 <button class="band_btn">
                                    <a href="#">
                                             <span>
-                                                주제
+                                                캘리
                                             </span>
                                             밴드 더보기
                                             <i class="fa-solid fa-chevron-right"></i>
@@ -319,23 +385,31 @@
                                 </button>
                             </div>
                         </li>
-                        <li>
-                            <img src="./band_img.png" alt="band_img">
+                        <li class="band_selection_box">
+                            <img src="./band_selection-9.jpg" alt="band_img">
                             <div class="band_name_box">
-                                <h3>밴드 이름</h3>
-                                <p>설명</p>
+                                <h3>
+                                    가수영탁 팬밴드
+                                </h3>
+                                <p>
+                                    미스터 트롯(선) 출신 영탁가수의 밴드 입니다 2007년 "사랑한다"...
+                                </p>
                                 <div>
-                                    <span>멤버수</span>
+                                    <span>
+                                        멤버 2,746
+                                    </span>
                                     <span>
                                        · 
                                     </span>
-                                    <span>리더</span>
+                                    <span>
+                                        리더 리더 유재태(부산)
+                                    </span>
                             </div>
                             <div>
                                 <button class="band_btn">
                                    <a href="#">
                                             <span>
-                                                주제
+                                                영탁
                                             </span>
                                             밴드 더보기
                                             <i class="fa-solid fa-chevron-right"></i>
@@ -343,7 +417,39 @@
                                 </button>
                             </div>
                         </li>
-    
+                        <li class="band_selection_box">
+                            <img src="./band_selection-10.jpg" alt="band_img">
+                            <div class="band_name_box">
+                                <h3>
+                                    영어필사
+                                </h3>
+                                <p>
+                                    영어필사공간입니다. 참여밴드로 진행중이거나 관심있는 영어 자...
+                                </p>
+                                <div>
+                                    <span>
+                                        멤버 598
+                                    </span>
+                                    <span>
+                                       · 
+                                    </span>
+                                    <span>
+                                        리더 Su
+                                    </span>
+                            </div>
+                            <div>
+                                <button class="band_btn">
+                                   <a href="#">
+                                            <span>
+                                                영어필사
+                                            </span>
+                                            밴드 더보기
+                                            <i class="fa-solid fa-chevron-right"></i>
+                                        </a>
+                                </button>
+                            </div>
+                        </li>
+
                     </ul>
                 </div>
             </section>
